<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp" >

    <LinearLayout
        android:layout_margin="7dp"
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buydialogbg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tip_trainslate_title"
            android:textColor="#333333"
            android:textSize="23sp" />
        
        <TextView
            android:id="@id/tv_charmvalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tv_translatable_charm"
            android:textSize="16sp"
            android:textColor="#666666" />

        <EditText
            android:id="@+id/et_charmvalue"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="8"
            android:paddingLeft="10dp"
            android:hint="@string/tip_hint_translate"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColor="#999999"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="2.5dp"
                android:layout_weight="1"
                android:background="@drawable/selector_order_cancel"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="#7b7b7b"
                android:textStyle="bold"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2.5dp"
                android:layout_weight="1"
                android:background="@drawable/selector_order_confirm"
                android:padding="10dp"
                android:text="@string/ok_trainslate"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>