<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    android:orientation="vertical" >

    <!-- 标题栏 -->

    <RelativeLayout
        android:id="@+id/rl_01"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@drawable/shape_top_bar" >

        <Button
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/title_btn_back"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/write_order"
            android:textColor="@color/white"
            android:textSize="@dimen/label_top" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"
                android:text="@string/tip_order"
                android:textColor="#999999"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rectangle3"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"  android:layout_marginRight="8dp"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp" 
                        android:text="@string/real_name"
                        android:textColor="#505050"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_name"
                        style="@style/et_order_lable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/tv_username"
                        android:hint="@string/hint_real_name"
                        android:inputType="textPersonName"
                        android:maxLength="10" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:layout_below="@id/et_name"
                        android:layout_toRightOf="@id/tv_username"
                        android:background="#e1e1e1" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"  android:layout_marginRight="8dp"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/tv_userphone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/tel"
                        android:textColor="#505050"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_phone"
                        style="@style/et_order_lable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/tv_userphone"
                        android:hint="@string/hint_tel"
                        android:inputType="phone"
                        android:maxLength="11" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:layout_below="@id/et_phone"
                        android:layout_marginLeft="2dp"
                        android:layout_toRightOf="@id/tv_userphone"
                        android:background="#e1e1e1" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@id/rl_addr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" 
                    android:layout_marginBottom="10dp"
                     android:layout_marginRight="8dp"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/tv_useraddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/tv_addr_send"
                        android:textColor="#505050"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_address"
                        style="@style/et_order_lable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/tv_useraddress"
                        android:hint="@string/tip_addr_send"
                        android:inputType="text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:layout_below="@id/et_address"
                        android:layout_toRightOf="@id/tv_useraddress"
                        android:background="#e1e1e1" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@id/ll_oper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     android:layout_marginRight="8dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@id/tv_oper_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/tip_oper"
                        android:textColor="#999999"
                        android:textSize="12sp" />

                    <RadioGroup
                        android:id="@id/rg_oper"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@id/oper_mobile"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.0"
                            android:button="@drawable/exchange_telephone"
                            android:gravity="center_vertical"
                            android:text="@string/tv_mobile"
                            android:textColor="#666666"
                            android:textSize="14sp" />

                        <RadioButton
                            android:id="@id/oper_telecom"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.0"
                            android:button="@drawable/exchange_telephone"
                            android:gravity="center_vertical"
                            android:text="@string/tv_telecom"
                            android:textColor="#666666"
                            android:textSize="14sp" />

                        <RadioButton
                            android:id="@id/oper_unicom"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.0"
                            android:button="@drawable/exchange_telephone"
                            android:gravity="center_vertical"
                            android:text="@string/tv_unicom"
                            android:textColor="#666666"
                            android:textSize="14sp" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp" >

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_order_cancel"
                    android:onClick="onClick"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/cancel"
                    android:textColor="#7c7c7c"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_order_confirm"
                    android:onClick="onClick"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>