<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/ll_contain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@id/rl_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="15dp"
            android:descendantFocusability="blocksDescendants"
            android:padding="10dp" >

            <com.hnmoma.driftbottle.custom.CircularImage
                android:id="@id/iv_head"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:background="@drawable/icon_head"
                android:contentDescription="@string/uploadHead"
                android:padding="2dp"
                android:scaleType="centerInside" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_head"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/tip_click_head"
                android:textColor="#999999"
                android:textSize="12sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_bg"
            android:minHeight="50dp"
            android:orientation="horizontal"
            android:padding="10dp" >

            <EditText
                android:id="@id/et_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:hint="@string/hint_nikcname"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:singleLine="true"
                android:textColorHint="@color/et_hint"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_bg"
            android:descendantFocusability="blocksDescendants"
            android:minHeight="50dp"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@id/tv_lable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp"
                android:layout_weight="0.38"
                android:text="@string/tv_sex"
                android:textColor="#8c8c8C"
                android:textSize="16sp" />

            <TextView
                android:id="@id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp"
                android:layout_weight="0.17"
                android:gravity="left|center_vertical"
                android:text="@string/tip_selector_sex"
                android:textColor="#8c8c8C"
                android:textSize="14sp" />

            <ImageView
                android:id="@id/iv_arrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.45"
                android:src="@drawable/icon_arrow" />
        </LinearLayout>

        <Button
            android:id="@id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/selector_add_info"
            android:minHeight="32dp"
            android:padding="10dp" 
            android:textColor="@color/white"
            android:text="@string/next_step" />
    </LinearLayout>

    <TextView
        android:id="@id/tv_tip_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal|bottom"
        android:padding="10dp"
        android:text="@string/tip_sex"
        android:textColor="#999999" />

</LinearLayout>