<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp" >

    <LinearLayout
        android:layout_margin="7dp"
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buydialogbg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="提示"
            android:textColor="#666666"
            android:textSize="23sp" />
        
        <TextView
            android:id="@id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tv_translatable_charm"
            android:textSize="16sp"
            android:textColor="#999999" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/selector_btn_cancel"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/selector_poprightbt"
                android:padding="10dp"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>